<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="txt_produto">Nome do Produto</string>
    <string name="btn_inserir">Inserir</string>
    <string name="txt_cadastro_titulo">Cadastrar produto</string>
    <string name="txt_quantidade">Quantidade</string>
    <string name="txt_preco">R$ 0,00</string>
    <string name="txt_total">TOTAL: R$ 0,00</string>
    <string name="btn_adicionar">Adicionar itens</string>
    <string name="img_produto_descricao">Imagem do produto</string>
    <string name="txt_qnt"> Qnt</string>
</resources>
