<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".CadastroActivity">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/txt_cadastro_titulo"
            android:text="@string/txt_cadastro_titulo" android:textStyle="bold" android:textSize="21sp"
            android:layout_marginBottom="15dp"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/img_foto_produto" android:layout_gravity="center_horizontal"
            android:contentDescription="@string/img_produto_descricao"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_produto" android:hint="@string/txt_produto"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txt_quantidade" android:hint="@string/txt_quantidade" android:inputType="number"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txt_valor" android:inputType="numberDecimal" android:hint="@string/txt_preco"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btn_inserir"
            android:text="@string/btn_inserir"/>
</LinearLayout>